--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
       <center>
-        <img class="square" src="https://github.com/ggjj321/ggjj321.github.io/blob/main/me.jpg">
+        <img class="square" src="me.jpg">
         
         <div class="card" style="width: 25rem;">
             <div class="card-body">
